# movie-recommendation-project

./: .env.example  .env.laptop  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  add_descriptions_examples.py  add_visualizations.py  docker-compose.yml  fix_dark_mode_and_enhance.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
alembic/: env.py
alembic/versions/: 84b05f46432e_create_tables.py  a4f6b1d9794c_create_tables.py  bbc898ff9f3d_test_table.py
final_project/: assignment.md
homework1/: assignment.md
homework2/: assignment.md
homework2/solution/: analysis_queries_results.md  analysis_queries_results_small.md
models/: recommendation_model_20251028_231420.pkl  recommendation_model_20251028_231917.pkl  recommendation_model_20251028_232024.pkl  recommendation_model_20251028_233506.pkl  recommendation_model_20251028_233608.pkl  recommendation_model_20251028_233613.pkl  recommendation_model_20251028_233701.pkl  recommendation_model_20251028_233751.pkl  recommendation_model_20251029_000047.pkl  recommendation_model_latest.pkl
scripts/: alembic_autogenerate_migration.sh  alembic_run_migrations.sh  populate_database.py  run_analysis_queries.py  run_local.sh  run_scratch.py  run_sync_vs_async.py
server/: Postman folder structure.md  app.py
server/backend/: config.py  postgres.py
server/models/: __init__.py  genres.py  movies.py  movies_genres.py  movies_raw.py  ratings.py  ratings_raw.py  user.py
server/routers/: movies.py  ratings.py  recommendations.py
server/schemas/: __init__.py  error.py  (+3 more)
tests/: __init__.py  conftest.py
(+17 files in other folders)
